<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/txt_bienvenida"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintEnd_toStartOf="@+id/etMonto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rbSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_saldo" />

        <RadioButton
            android:id="@+id/rbIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_ingresar" />

        <RadioButton
        android:id="@+id/rbRetirar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_retirar" />

        <RadioButton
            android:id="@+id/rbSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_salir" />
    </RadioGroup>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="278dp"
        android:text="@string/btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etMonto"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="23dp"
        android:autofillHints="@string/txt_input_movimiento"
        android:ems="10"
        android:hint="@string/txt_input_movimiento"
        android:inputType="text"
        android:textColorHint="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rgTransaction"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etSaldo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/txt_saldo_actual"
        android:ems="10"
        android:hint="@string/txt_saldo_actual"
        android:inputType="text"
        android:textColorHint="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rgTransaction"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="83dp"
        android:text="@string/txt_ver_saldo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rgTransaction"
        app:layout_constraintTop_toBottomOf="@+id/etMonto" />

</androidx.constraintlayout.widget.ConstraintLayout>